--- a/index.html
+++ b/index.html
@@ -17,22 +17,15 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">TFSI Graphs</a>
+            <a class="navbar-brand" href="#">TFSI Graphs by Tej Gumaste in Collaboration with Blakemore labs</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                    
+                    <li class="nav-item" style="padding-right: 15px;">
+                        <a class="nav-link" href="https://www.github.com/Vegito2367" target="_blank">Contact</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -52,7 +45,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Ag Presence Graph</h5>
                         <p class="card-text">S-N-S Angle vs Bond Length Deltas for TFSI_NoDisorder with Ag presence</p>
-                        <a href="AgPres.html" class="btn btn-primary">View Graph</a>
+                        <a href="AgPres.html" class="btn btn-primary" target="_blank">View Graph</a>
                     </div>
                 </div>
             </div>
@@ -62,7 +55,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Au Presence Graph</h5>
                         <p class="card-text">S-N-S Angle vs Bond Length Deltas for TFSI_NoDisorder with Au presence</p>
-                        <a href="AuPres.html" class="btn btn-primary">View Graph</a>
+                        <a href="AuPres.html" class="btn btn-primary" target="_blank">View Graph</a>
                     </div>
                 </div>
             </div>
@@ -72,7 +65,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Cu Presence Graph</h5>
                         <p class="card-text">S-N-S Angle vs Bond Length Deltas for TFSI_NoDisorder with Cu presence</p>
-                        <a href="CuPres.html" class="btn btn-primary">View Graph</a>
+                        <a href="CuPres.html" class="btn btn-primary" target="_blank">View Graph</a>
                     </div>
                 </div>
             </div>
@@ -85,7 +78,7 @@
                   <div class="card-body">
                       <h5 class="card-title">Fe Presence Graph</h5>
                       <p class="card-text">S-N-S Angle vs Bond Length Deltas for TFSI_NoDisorder with Fe presence</p>
-                      <a href="FePres.html" class="btn btn-primary">View Graph</a>
+                      <a href="FePres.html" class="btn btn-primary" target="_blank">View Graph</a>
                   </div>
               </div>
           </div>
@@ -95,7 +88,7 @@
                   <div class="card-body">
                       <h5 class="card-title">Hg Presence Graph</h5>
                       <p class="card-text">S-N-S Angle vs Bond Length Deltas for TFSI_NoDisorder with Hg presence</p>
-                      <a href="HgPres.html" class="btn btn-primary">View Graph</a>
+                      <a href="HgPres.html" class="btn btn-primary" target="_blank">View Graph</a>
                   </div>
               </div>
           </div>
@@ -105,19 +98,19 @@
                   <div class="card-body">
                       <h5 class="card-title">Pd Presence Graph</h5>
                       <p class="card-text">S-N-S Angle vs Bond Length Deltas for TFSI_NoDisorder with Pd presence</p>
-                      <a href="PdPres.html" class="btn btn-primary">View Graph</a>
+                      <a href="PdPres.html" class="btn btn-primary" target="_blank">View Graph</a>
                   </div>
               </div>
           </div>
       </div>
-      <div id="row2" class="row">
+      <div id="row3" class="row">
           
         <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Pt Presence Graph</h5>
                     <p class="card-text">S-N-S Angle vs Bond Length Deltas for TFSI_NoDisorder with Pt presence</p>
-                    <a href="PtPres.html" class="btn btn-primary">View Graph</a>
+                    <a href="PtPres.html" class="btn btn-primary" target="_blank">View Graph</a>
                 </div>
             </div>
         </div>
@@ -127,7 +120,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Ru Presence Graph</h5>
                     <p class="card-text">S-N-S Angle vs Bond Length Deltas for TFSI_NoDisorder with Ru presence</p>
-                    <a href="RuPres.html" class="btn btn-primary">View Graph</a>
+                    <a href="RuPres.html" class="btn btn-primary" target="_blank">View Graph</a>
                 </div>
             </div>
         </div>
