Added Excel sheet to website

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     <div class="container">
         <h1 class="my-4">Graph Dashboard</h1>
+        <a href="https://docs.google.com/spreadsheets/d/1-S9NZ7xiVYj_gyIIcQXzeiQ7ru1V82k-Z15Dre1pb8Q/edit?usp=sharing" target="_blank" class="my-2 btn btn-outline-success">TFSI compounds excel sheet</a>
         <div id="row1" class="row">
             <!-- Example graph card -->
             <div class="col-lg-4 col-md-6 col-sm-12">
